--- a/web/src/index.css
+++ b/web/src/index.css
@@ -31,3 +31,8 @@ video {
     max-height: 90vh;
     box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15), 0 2px 2px rgba(0, 0, 0, 0.15), 0 4px 4px rgba(0, 0, 0, 0.15), 0 8px 8px rgba(0, 0, 0, 0.15);
 }
+
+
+.github-icon {
+
+}
